commit n°8 31/05/2020 Affichage d'un produit sélectionné

--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -61,9 +61,8 @@
                 </table>
                 #}
 
-
                 <div>
-                    <a href="#" class="btn btn-warning" style="color: white"><strong>D É C O U V R I R</strong></a>
+                    <a href="{{ path('afficher_un_produit', {'id': article.id}) }}" class="btn btn-warning" style="color: white"><strong>D É C O U V R I R</strong></a>
                 </div>
 
                 <hr>
