--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -56,7 +56,7 @@
             </li>
             <li class="nav-item">
                 <button class="btn btn-outline-success" type="button">
-                    <a class="nav-link" href="#" style="color: white">Pannier</a>
+                    <a class="nav-link" href="{{ path('chariot_index') }}" style="color: white">Pannier</a>
                 </button>
             </li>
         </ul>
