--- a/templates/produit/afficherUnProduit.html.twig
+++ b/templates/produit/afficherUnProduit.html.twig
@@ -55,7 +55,7 @@
                     <td>{{ variante.prix - (variante.prix * variante.remise)/100 }} €</td>
 
                     <td>
-                        <a href="#" class="btn btn-success float-left">
+                        <a href="{{ path('chariot_ajouter', {'id': variante.id}) }}" class="btn btn-success float-left">
                             <!-- https://icons.getbootstrap.com/ -->
                             <svg class="bi bi-cart3" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
                                  xmlns="http://www.w3.org/2000/svg">
