commit n°10 13/07/2020 Ajout un nouveau produit

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -45,6 +45,8 @@
                         <a class="dropdown-item" href="#">Inscription</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Connexion</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('ajouter_produit') }}">Ajouter un produit</a>
                     {% else %}
                         <a class="dropdown-item" href="#">#</a>
                         <div class="dropdown-divider"></div>
