commit n°11 14/07/2020 Modifier un produit

--- a/templates/produit/ajouterModifierProduit.html.twig
+++ b/templates/produit/ajouterModifierProduit.html.twig
@@ -1,7 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Ajouter un nouveau produit</h2>
+    {% if produitExist %}
+        <h2>Modifier un produit</h2>
+    {% else %}
+        <h2>Ajouter un nouveau produit</h2>
+    {% endif %}
+
     {{ form_start(formulaireProduit) }}
     {{ form_row(formulaireProduit.nomProduit, {'label': 'Nom', 'attr': {'placeholder': 'Nom ...'}}) }}
     {{ form_row(formulaireProduit.categorie, {'label': 'Catégorie'}) }}
@@ -9,7 +14,11 @@
     {{ form_row(formulaireProduit.description, {'label': 'Déscription', 'attr': {'placeholder': 'déscription ...'}}) }}
     {{ form_row(formulaireProduit.motRecherche, {'label': 'Mot de recherche', 'attr': {'placeholder': 'mot de recherche ...'}}) }}
     <button type="submit" class="btn btn-success">
-        Ajouter le produit
+        {% if produitExist %}
+            Enregistrer les modifications
+        {% else %}
+            Ajouter le nouveau produit
+        {% endif %}
     </button>
     {{ form_end(formulaireProduit) }}
 {% endblock %}
