commit n°12 14/07/2020 ADMINISTRATION :  - Liste des produits  - Ajout un nouveau produit  - Modifier un produit

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -46,7 +46,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Connexion</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{{ path('ajouter_produit') }}">Ajouter un produit</a>
+                        <a class="dropdown-item" href="{{ path('afficher_produits') }}">Administration du site</a>
                     {% else %}
                         <a class="dropdown-item" href="#">#</a>
                         <div class="dropdown-divider"></div>
