commit n°14 15/07/2020 ADMINISTRATION :  - Liste des produits  - Ajout un nouveau produit  - Modifier un produit  - Supprimer un produit  - Ajouter d'autre information pour un produit

--- a/templates/produit/afficherLesProduits.html.twig
+++ b/templates/produit/afficherLesProduits.html.twig
@@ -36,6 +36,9 @@
                             <div class="btn mr-1">
                                 <a href="{{ path('supprimer_produit', {'id': produit.id}) }}" class="btn btn-danger">Supprimer</a>
                             </div>
+                            <div class="btn mr-1">
+                                <a href="{{ path('ajouter_informations_produit', {'id': produit.id}) }}" class="btn btn-success">Ajouter des informations</a>
+                            </div>
                         </div>
                     </td>
                 </tr>
