commit n°16 16/07/2020 ADMINISTRATION :  - Liste des produits  - Ajout un nouveau produit  - Modifier un produit  - Supprimer un produit  - Ajouter d'autre information pour un produit     * Ajouter une nouvelle variante d'un produit     * Modifier une variante d'un produit

--- a/templates/produit/afficherLesProduits.html.twig
+++ b/templates/produit/afficherLesProduits.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="row mb-2 mt-2">
         <div class="col text-right">
-            <a href="{{ path('ajouter_produit') }}" class="btn btn-primary">Nouveau livre</a>
+            <a href="{{ path('ajouter_produit') }}" class="btn btn-primary">Nouveau produit</a>
         </div>
     </div>
 
