--- a/templates/produit/ajouterInformations.html.twig
+++ b/templates/produit/ajouterInformations.html.twig
@@ -56,10 +56,10 @@
                     <td>
                         <div class="btn-group">
                             <div class="btn mr-1">
-                                <a href="{{ path('modifier_variante', {'id': variante.id}) }}" class="btn btn-warning">Modifier {{ unArticle.id }} - {{ variante.id}}</a>
+                                <a href="{{ path('modifier_variante', {'id': variante.id}) }}" class="btn btn-warning">Modifier</a>
                             </div>
                             <div class="btn mr-1">
-                                <a href="#" class="btn btn-danger">Supprimer {{ unArticle.id }} - {{ variante.id}}</a>
+                                <a href="#" class="btn btn-danger">Supprimer</a>
                             </div>
                         </div>
                     </td>
