commit n°17 16/07/2020 ADMINISTRATION :  - Liste des produits  - Ajout un nouveau produit  - Modifier un produit  - Supprimer un produit  - Ajouter d'autre information pour un produit     * Ajouter une nouvelle variante d'un produit     * Modifier une variante d'un produit     * Supprimer une variante

--- a/templates/produit/ajouterInformations.html.twig
+++ b/templates/produit/ajouterInformations.html.twig
@@ -59,7 +59,7 @@
                                 <a href="{{ path('modifier_variante', {'id': variante.id}) }}" class="btn btn-warning">Modifier</a>
                             </div>
                             <div class="btn mr-1">
-                                <a href="#" class="btn btn-danger">Supprimer</a>
+                                <a href="{{ path('supprimer_variante', {'id': variante.id}) }}" class="btn btn-danger">Supprimer</a>
                             </div>
                         </div>
                     </td>
