--- a/templates/produit/ajouterInformations.html.twig
+++ b/templates/produit/ajouterInformations.html.twig
@@ -5,7 +5,7 @@
         <div class="col text-right">
             <a href="{{ path('afficher_produits') }}" class="btn btn-primary">Lister les produits</a>
             <a href="{{ path('ajouter_variante', {'id': unArticle.id}) }}" class="btn btn-info">Ajouter une variante</a>
-            <a href="{{ path('afficher_produits') }}" class="btn btn-secondary">Ajouter une photo</a>
+            <a href="{{ path('telecharger_image', {'id': unArticle.id}) }}" class="btn btn-secondary">Ajouter une photo</a>
         </div>
     </div>
 
