--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -42,7 +42,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     {% if not app.user %}
-                        <a class="dropdown-item" href="#">Inscription</a>
+                        <a class="dropdown-item" href="{{ path('inscription_utilisateur') }}">Inscription</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Connexion</a>
                         <div class="dropdown-divider"></div>
@@ -52,7 +52,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Déconnexion</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Modification compte</a>
+                        <a class="dropdown-item" href="{{ path('modifier_utilisateur' , {'id': app.user.id}) }}">Modification compte</a>
                     {% endif %}
                 </div>
             </li>
