commit n°22 10/10/2020 Ajout + et - dans ajout de produit

--- a/templates/chariot/index.html.twig
+++ b/templates/chariot/index.html.twig
@@ -20,7 +20,13 @@
                 <tr>
                     <td>{{ item.produit.produit.nomProduit }}</td>
                     <td>{{ item.produit.prix }}</td>
-                    <td>{{ item.quantite }}</td>
+                    <td>
+                        {% if item.quantite < item.produit.qteStoque  %}
+                            <a href="{{ path('chariot_ajouter', {'id': item.produit.id}) }}" class="btn bg-ligth border rounded-circle"><b>+</b></a>
+                        {% endif %}
+                        {{ item.quantite }}
+                        <a href="{{ path('chariot_soustraire', {'id': item.produit.id}) }}" class="btn bg-ligth border rounded-circle"><b>-</b></a>
+                    </td>
                     <td>{{ item.produit.prix * item.quantite }}</td>
                     <td>
                         {# a.btn.btn-danger.btn-sm #}
